--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://qkrocwolf.github.io/verstka/",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
